1.09-pingpong-clusterip/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong # This is the app as declared in the deployment.
  ports:
    - port: 2350 
      targetPort: 3008 # This is the target port in our deploy
